--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -192,18 +192,24 @@ footer h2 {
   display: -webkit-flex;
   display: -moz-box;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: reverse;
-  -ms-flex-direction: column-reverse;
-  -webkit-flex-direction: column-reverse;
-  -moz-box-orient: vertical;
-  -moz-box-direction: reverse;
-  flex-direction: column-reverse; }
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+  -moz-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between; }
+
+.footer-img {
+  height: 48px; }
 
 .copyright-txt {
-  -ms-flex-item-align: end;
-  -webkit-align-self: flex-end;
-  align-self: flex-end; }
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-align-self: center;
+  -ms-flex-item-align: center;
+  align-self: center; }
 
 /* 768px - 992px */
 /* 576px - 768px */
@@ -219,11 +225,6 @@ footer h2 {
 
   footer h2 {
     font-size: 16px !important; }
-
-  .copyright-txt {
-    -ms-flex-item-align: end;
-    -webkit-align-self: flex-end;
-    align-self: flex-end; }
 
   table {
     font-size: 12px; } }
@@ -271,10 +272,10 @@ footer h2 {
   .footer-bottom {
     padding: 5px 0;
     font-size: 12px; }
+    .footer-bottom a {
+      font-size: 12px; }
 
-  .copyright-txt {
-    -ms-flex-item-align: end;
-    -webkit-align-self: flex-end;
-    align-self: flex-end; } }
+  .footer-img {
+    height: 24px; } }
 
 /*# sourceMappingURL=style.css.map */
