--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -216,19 +216,26 @@ footer {
   display: -webkit-flex;
   display: -moz-box;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: reverse;
-  -ms-flex-direction: column-reverse;
-  -webkit-flex-direction: column-reverse;
-     -moz-box-orient: vertical;
-     -moz-box-direction: reverse;
-          flex-direction: column-reverse;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+     -moz-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+
+}
+.footer-img {
+  height: 48px;
 }
 
 .copyright-txt {
-  -ms-flex-item-align: end;
-  -webkit-align-self: flex-end;
-          align-self: flex-end;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-align-self: center;
+      -ms-flex-item-align: center;
+          align-self: center;
 }
 
 @media screen and (max-width: 1200px) {}
@@ -258,11 +265,11 @@ footer {
     font-size: 16px !important;
   }
 
-  .copyright-txt {
-    -ms-flex-item-align: end;
-    -webkit-align-self: flex-end;
-            align-self: flex-end;
-  }
+  // .copyright-txt {
+  //   -ms-flex-item-align: end;
+  //   -webkit-align-self: flex-end;
+  //           align-self: flex-end;
+  // }
 
   table {
     font-size: 12px;
@@ -327,11 +334,15 @@ footer {
   .footer-bottom {
     padding: 5px 0;
     font-size: 12px;
+    a {font-size: 12px;}
+  }
+  .footer-img {
+    height: 24px;
   }
 
-  .copyright-txt {
-    -ms-flex-item-align: end;
-    -webkit-align-self: flex-end;
-            align-self: flex-end;
-  }
+  // .copyright-txt {
+  //   -ms-flex-item-align: end;
+  //   -webkit-align-self: flex-end;
+  //           align-self: flex-end;
+  // }
 }
