--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -166,25 +166,25 @@ h2 {
   margin: 0 10px 0 0; }
 
 /* footer */
-footer a {
-  color: #fff;
+footer {
   font-size: 16px; }
-  footer a:hover {
+  footer a {
     color: #fff;
-    text-decoration: none; }
-footer h2 {
-  font-size: 18px; }
+    font-size: 16px; }
+    footer a:hover {
+      color: #fff;
+      text-decoration: none; }
+  footer h2 {
+    font-size: 18px; }
 
 .footer-top {
   padding: 20px 0 10px 0;
-  color: #000;
   background-color: #d3d3d3; }
 
 .footer-bottom {
   color: #fff;
   padding: 10px 0;
-  background-color: #808080;
-  font-size: 14px; }
+  background-color: #808080; }
 
 .footer-bottom__wrapper {
   display: -webkit-box;
