--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -63,9 +63,9 @@ table {
   -webkit-box-direction: normal;
   -ms-flex-direction: column;
   -webkit-flex-direction: column;
-     -moz-box-orient: vertical;
-     -moz-box-direction: normal;
-          flex-direction: column;
+  -moz-box-orient: vertical;
+  -moz-box-direction: normal;
+  flex-direction: column;
   min-height: 100%;
 }
 
@@ -85,8 +85,8 @@ table {
     -webkit-box-align: center;
     -ms-flex-align: center;
     -webkit-align-items: center;
-       -moz-box-align: center;
-            align-items: center;
+    -moz-box-align: center;
+    align-items: center;
 
     & :first-child {
       margin-right: 2px;
@@ -103,8 +103,8 @@ table {
   -webkit-box-flex: 1;
   -ms-flex: 1 1 auto;
   -webkit-flex: 1 1 auto;
-     -moz-box-flex: 1;
-          flex: 1 1 auto;
+  -moz-box-flex: 1;
+  flex: 1 1 auto;
 }
 
 h2,
@@ -124,8 +124,8 @@ h2 {
   -webkit-box-pack: center;
   -ms-flex-pack: center;
   -webkit-justify-content: center;
-     -moz-box-pack: center;
-          justify-content: center;
+  -moz-box-pack: center;
+  justify-content: center;
 
   h2 {
     margin: 0;
@@ -133,7 +133,7 @@ h2 {
     -ms-grid-row-align: center;
     -ms-flex-item-align: center;
     -webkit-align-self: center;
-            align-self: center;
+    align-self: center;
     color: $h2_color;
     font-size: $h2_fz;
   }
@@ -144,12 +144,12 @@ h2 {
     height: 0;
     -webkit-animation-duration: 2s;
     -moz-animation-duration: 2s;
-      -o-animation-duration: 2s;
-         animation-duration: 2s;
+    -o-animation-duration: 2s;
+    animation-duration: 2s;
     -webkit-animation-iteration-count: infinite;
     -moz-animation-iteration-count: infinite;
-      -o-animation-iteration-count: infinite;
-         animation-iteration-count: infinite;
+    -o-animation-iteration-count: infinite;
+    animation-iteration-count: infinite;
   }
 
   .right_h2 {
@@ -182,6 +182,8 @@ h2 {
 
 /* footer */
 footer {
+  font-size: 16px;
+
   a {
     color: #fff;
     font-size: 16px;
@@ -199,7 +201,6 @@ footer {
 
 .footer-top {
   padding: 20px 0 10px 0;
-  color: #000;
   background-color: $footer-top_bg_color;
 }
 
@@ -207,7 +208,6 @@ footer {
   color: #fff;
   padding: 10px 0;
   background-color: $footer-bottom_bg_color;
-  font-size: 14px;
 }
 
 .footer-bottom__wrapper {
@@ -218,11 +218,12 @@ footer {
   display: flex;
   -webkit-box-pack: justify;
   -webkit-justify-content: space-between;
-     -moz-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -moz-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
 
 }
+
 .footer-img {
   height: 48px;
 }
@@ -318,9 +319,9 @@ footer {
     -webkit-box-direction: normal;
     -ms-flex-direction: column;
     -webkit-flex-direction: column;
-       -moz-box-orient: vertical;
-       -moz-box-direction: normal;
-            flex-direction: column;
+    -moz-box-orient: vertical;
+    -moz-box-direction: normal;
+    flex-direction: column;
   }
 
   footer h2 {
@@ -334,8 +335,12 @@ footer {
   .footer-bottom {
     padding: 5px 0;
     font-size: 12px;
-    a {font-size: 12px;}
+
+    a {
+      font-size: 12px;
+    }
   }
+
   .footer-img {
     height: 24px;
   }
