--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -206,7 +206,7 @@ footer {
 
 .footer-bottom {
   color: #fff;
-  padding: 10px 0;
+  padding: 10px;
   background-color: $footer-bottom_bg_color;
 }
 
