--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -183,7 +183,7 @@ footer {
 
 .footer-bottom {
   color: #fff;
-  padding: 10px 0;
+  padding: 10px;
   background-color: #808080; }
 
 .footer-bottom__wrapper {
