--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -167,6 +167,8 @@ h2 {
 
 /* footer */
 footer {
+  padding: 0;
+  margin: 0;
   font-size: 16px; }
   footer a {
     color: #fff;
@@ -223,9 +225,6 @@ footer {
     border: 16.2px solid transparent;
     border-right-color: #000; }
 
-  footer h2 {
-    font-size: 16px !important; }
-
   table {
     font-size: 12px; } }
 /* 320px - 576px */
@@ -263,17 +262,14 @@ footer {
     -moz-box-direction: normal;
     flex-direction: column; }
 
-  footer h2 {
-    font-size: 12px !important; }
-
   .footer-top {
     padding: 5px 0; }
 
   .footer-bottom {
     padding: 5px 0;
-    font-size: 12px; }
+    font-size: 10px; }
     .footer-bottom a {
-      font-size: 12px; }
+      font-size: 10px; }
 
   .footer-img {
     height: 24px; } }
