--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -230,6 +230,17 @@ footer {
   height: 48px;
 }
 
+.git-hub {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-align-self: center;
+  -ms-flex-item-align: center;
+  align-self: center;
+}
+
 .copyright-txt {
   display: -webkit-box;
   display: -webkit-flex;
@@ -315,6 +326,7 @@ footer {
     -moz-box-direction: normal;
     flex-direction: column;
   }
+
   .footer-top {
     padding: 5px 0;
   }
