--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -282,6 +282,20 @@ footer {
       font-size: 10px; }
 
   .footer-img {
-    height: 24px; } }
+    height: 24px; }
+
+  .copyright-txt {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+    -moz-box-orient: vertical;
+    -moz-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column; } }
 
 /*# sourceMappingURL=style.css.map */
