--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -343,4 +343,18 @@ footer {
   .footer-img {
     height: 24px;
   }
+  .copyright-txt {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+       -moz-box-orient: vertical;
+       -moz-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
 }
