--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -223,6 +223,15 @@ footer {
   -ms-flex-item-align: center;
   align-self: center; }
 
+@media screen and (max-width: 1200px) {
+  .copyright-txt {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+    -moz-box-orient: vertical;
+    -moz-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column; } }
 /* 768px - 992px */
 /* 576px - 768px */
 @media screen and (max-width: 768px) {
@@ -282,20 +291,6 @@ footer {
       font-size: 10px; }
 
   .footer-img {
-    height: 24px; }
-
-  .copyright-txt {
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -moz-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -webkit-flex-direction: column;
-    -moz-box-orient: vertical;
-    -moz-box-direction: normal;
-    -ms-flex-direction: column;
-    flex-direction: column; } }
+    height: 24px; } }
 
 /*# sourceMappingURL=style.css.map */
