--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -252,7 +252,17 @@ footer {
   align-self: center;
 }
 
-@media screen and (max-width: 1200px) {}
+@media screen and (max-width: 1200px) {
+  .copyright-txt {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+    -moz-box-orient: vertical;
+    -moz-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+  }
+}
 
 /* 768px - 992px */
 @media screen and (max-width: 992px) {}
@@ -342,19 +352,5 @@ footer {
 
   .footer-img {
     height: 24px;
-  }
-  .copyright-txt {
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -moz-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -webkit-flex-direction: column;
-       -moz-box-orient: vertical;
-       -moz-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
   }
 }
