--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -418,6 +418,9 @@ footer {
   }
 
   .footer-img {
-    height: 24px;
+    height: 96px;
+  }
+  .btn-primary {
+    height: 16px !important;
   }
 }
